fixing navbar flex-direction on mobile

--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -213,6 +213,15 @@ div#modalbody{
 }
 
 @media only screen and (max-width: 576px) {
+
+  div#divMenu{
+    width: 100%;
+    display: flex;
+    flex-direction: row-reverse!important;
+    justify-content: flex-start;
+}
+
+
   nav ul li a:hover {
     color: white;
   }
